feat: add status message component and integrate it into user management; update store for status handling

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.6.0",
     "formik": "^2.4.6",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "yup": "^1.6.1",
